# ibridger-sdk

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml  publish-js.yml  release-cpp.yml
cmake/: ibridgerConfig.cmake.in
core/: CMakeLists.txt
core/include/ibridger/: ibridger.h
core/include/ibridger/common/: error.h
core/include/ibridger/protocol/: framing.h
core/include/ibridger/rpc/: server.h
core/include/ibridger/rpc/builtin/: ping_service.h
core/include/ibridger/transport/: named_pipe_transport.h  transport_factory.h  unix_socket_transport.h
core/src/: ibridger.cpp
core/src/protocol/: framing.cpp
core/src/rpc/: client.cpp  server.cpp
core/src/rpc/builtin/: ping_service.cpp
core/src/transport/: named_pipe_transport.cpp  transport_factory.cpp  unix_socket_transport.cpp
core/tests/: CMakeLists.txt  test_transport_pair.h
core/tests/protocol/: envelope_codec_test.cpp  framing_test.cpp
core/tests/rpc/: client_test.cpp  server_test.cpp
core/tests/rpc/builtin/: ping_service_test.cpp
core/tests/transport/: named_pipe_test.cpp  transport_factory_test.cpp  unix_socket_test.cpp
docs/: ROADMAP.md  WIRE_PROTOCOL.md  adding-a-language.md
proto/: CMakeLists.txt
sdk/cpp/: CMakeLists.txt
sdk/cpp/cmake/: Dependencies.cmake  iBridgerConfig.cmake.in
sdk/cpp/src/: ibridger_sdk.cpp
sdk/js/: README.md  package-lock.json  package.json
sdk/js/examples/: README.md  echo-server.ts  ping-client.ts
sdk/js/src/: index.ts
sdk/js/src/rpc/: client.ts  server.ts
tests/integration/: cross_language.test.ts  helpers.ts
